prometheus/06-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app: prometheus
spec:
  type: NodePort
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      nodePort: 30090
  selector:
    app: prometheus
